--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+
   <title>{{title}}</title>
 </head>
 
@@ -13,9 +14,22 @@
   <div class="main-content">
     {{>header}}
     <p>Use this site to get the weather</p>
+
+    <form>
+      <input type="text" placeholder="Location">
+      <button>Search</button>
+    </form>
+    <div id="icon">
+
+      <p id="location"></p>
+      <p id="forecast"></p>
+    </div>
+
+
   </div>
 
   {{>footer}}
+  <script src="js/index.js"></script>
 </body>
 
 </html>
