--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
    <div class="main-content">
     {{>header}}
+    <p>This site was created by Naoko. It uses data from MapBox and WeatherStack.</p>
     <img class="portrait" src="img/pino.jpg" alt="Pino Image">
   </div>
   
